--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mongo-express-clone",
   "version": "1.0.0",
   "description": "clone mongo-express repo to understand the workings of node, express, mongodb",
+  "type": "module",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,5 +12,13 @@
     "mongo-express"
   ],
   "author": "Rajesh SR",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cli-color": "^2.0.3",
+    "commander": "^2.9.0",
+    "csurf": "1.11.0",
+    "dotenv": "^16.0.3",
+    "express": "4.18.2",
+    "mongodb-query-parser": "2.4.6"
+  }
 }
